--- a/MemoriaFlora/ViewControllers/Home/GraveyardTableViewCell.xib
+++ b/MemoriaFlora/ViewControllers/Home/GraveyardTableViewCell.xib
@@ -39,15 +39,23 @@
                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot Password" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMy-HN-k0I">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot Password" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMy-HN-k0I">
                                 <rect key="frame" x="120" y="46" width="254" height="17"/>
                                 <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="14"/>
                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Of Demise" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7c-6c-ddl">
+                                <rect key="frame" x="120" y="71" width="254" height="15.666666666666671"/>
+                                <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="13"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="n7c-6c-ddl" firstAttribute="top" secondItem="NMy-HN-k0I" secondAttribute="bottom" constant="8" id="0oQ-Ua-OWe"/>
+                            <constraint firstItem="n7c-6c-ddl" firstAttribute="trailing" secondItem="NMy-HN-k0I" secondAttribute="trailing" id="1Ip-Li-ieU"/>
                             <constraint firstAttribute="trailing" secondItem="k6V-1A-jTY" secondAttribute="trailing" constant="16" id="8Lz-QT-ziG"/>
                             <constraint firstAttribute="trailing" secondItem="NMy-HN-k0I" secondAttribute="trailing" constant="8" id="GTn-9c-GhZ"/>
                             <constraint firstItem="NMy-HN-k0I" firstAttribute="leading" secondItem="k6V-1A-jTY" secondAttribute="leading" id="MjS-xb-b8w"/>
@@ -57,6 +65,7 @@
                             <constraint firstItem="7zg-wp-zRY" firstAttribute="centerY" secondItem="r3D-Ej-5MS" secondAttribute="centerY" id="fZb-qm-U2K"/>
                             <constraint firstItem="NMy-HN-k0I" firstAttribute="top" secondItem="k6V-1A-jTY" secondAttribute="bottom" constant="6" id="gLp-uk-iCb"/>
                             <constraint firstAttribute="width" constant="382" id="noC-YF-HbU"/>
+                            <constraint firstItem="n7c-6c-ddl" firstAttribute="leading" secondItem="NMy-HN-k0I" secondAttribute="leading" id="pd2-q3-OeE"/>
                             <constraint firstItem="7zg-wp-zRY" firstAttribute="leading" secondItem="r3D-Ej-5MS" secondAttribute="leading" constant="16" id="prr-Ss-Hrz"/>
                         </constraints>
                     </view>
@@ -72,6 +81,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="containerView" destination="r3D-Ej-5MS" id="iNg-03-wlt"/>
+                <outlet property="dateOfDemiseLabel" destination="n7c-6c-ddl" id="EPi-tx-nnt"/>
                 <outlet property="descriptionLabel" destination="NMy-HN-k0I" id="krz-BP-9cf"/>
                 <outlet property="titleLabel" destination="k6V-1A-jTY" id="eQ3-a7-tyB"/>
                 <outlet property="userImageView" destination="7zg-wp-zRY" id="Mva-l6-tMp"/>
